...
        modifier =
            modifier
                .fillMaxWidth()
                .padding(
                    horizontal = MessageContentGutter,
                ).padding(bottom = MessageAreaRowSpacing)
                .testTag("message-row"),
        content = {
            Surface(
                modifier =
                    Modifier
                        .shadow(4.dp, BubbleShape)
                        .testTag(MESSAGE_BUBBLE_TEST_TAG)
...
